AC_PREREQ(2.59)
AC_INIT([pewpew],[1.0],[gregliras@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile 
                 src/Makefile])

AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([select])
AC_CHECK_FUNCS([sqrt])

AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([sys/ioctl.h])


AC_HEADER_STDBOOL

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_TYPE_UINT16_T
AC_TYPE_UINT8_T


AC_OUTPUT

