bin_PROGRAMS = pewpew
pewpew_SOURCES = drawables.cpp dummyship.cpp fire_weapon.cpp game_object.cpp game_ship.cpp game_state.cpp high_score_handler.cpp joystick.cpp level.cpp main_weapon.cpp menu.cpp menu_items.cpp pewpew.cpp player_ships.cpp pulse_weapon.cpp screen_handler.cpp sonic_weapon.cpp sounds.cpp spiral_ship.cpp upgrades.cpp vector2D.cpp defaults.h drawables.h dummyship.h fire_weapon.h game_object.h game_ship.h game_state.h high_score_handler.h joystick.h level.h main_weapon.h menu.h menu_items.h pewpew.h player_ships.h pulse_weapon.h screen_handler.h ships.h sonic_weapon.h sounds.h spiral_ship.h upgrades.h vector2D.h
pewpew_CFLAGS = -Wall -Wextra -O2
pewpew_LDADD = -lglut -lalut -lGLU -lopenal -lGL
